syntax = "proto3";
package dev.array21.invoicex;

import "entities/org.proto";

message GetOrgResponse {
  Org org = 1;
  repeated OrgUser orgUsers = 2;
}